syntax = "proto3";

package solana;

option go_package = "github.com/al002/sylph/chains/solana/proto";

message Block {
  int64 slot = 1;
  string blockhash = 2;
  int64 parent_slot = 3;
  int64 timestamp = 4;
  string previous_blockhash = 5;
  string leader = 6;
  int64 leader_reward = 7;
  int64 total_compute_units = 8;
  string total_fee = 9;
}

message Transaction {
  string signature = 1;
  bool success = 2;
  string fee = 3;
  int64 compute_units_consumed = 4;
  string transaction_category = 5;
  int32 program_count = 6;
  int32 write_account_count = 7;
  int32 read_account_count = 8;
}

message Instruction {
  string program_id = 1;
  bytes data = 2;
  int32 order_index = 3;
  string instruction_type = 4;
  map<string, string> parsed_data = 5;
  repeated InstructionAccount accounts = 6;
}

message InstructionAccount {
  string address = 1;
  bool is_signer = 2;
  bool is_writable = 3;
  int32 order_index = 4;
}

message TokenTransfer {
  string from_address = 1;
  string to_address = 2;
  string amount = 3;
  string token_type = 4;
  string token_mint = 5;
  string transaction_signature = 6;
}

message BlockData {
  Block block = 1;
  repeated Transaction transactions = 2;
  repeated Instruction instructions = 3;
  repeated TokenTransfer token_transfers = 4;
}
